# UnrealMCPServer

./: .cursorrules  .gitignore  .mcp.json  LICENSE  README.md  UnrealMCPServer.uplugin
.cursor/: mcp.json
.cursor/notes/: MCP_HTTP_Implementation_TechSpec.md  agentnotes.md  notebook.md  project_checklist.md
Content/TestAssets/: MCP_TestMaterial.uasset  MCP_TestPawn.uasset  README.md
Resources/: README.md  prompts.json  resources.json
Source/UnrealMCPServer/: UnrealMCPServer.build.cs
Source/UnrealMCPServer/Private/: UMCP_AssetTools.cpp  UMCP_BlueprintTools.cpp  UMCP_CommonPrompts.cpp  UMCP_CommonResources.cpp  UMCP_CommonTools.cpp  UMCP_Server.cpp  (+3 more)
UnrealMCPProxy/: .gitignore  README.md  SCHEMA_SYNCHRONIZATION_GUIDE.md  TEST_PREPARATION.md  pyproject.toml  requirements.txt  run_tests.py  test_proxy.py
UnrealMCPProxy/docs/: QUICK_TEST_REFERENCE.md  TESTING_PLAN.md  TESTING_SUMMARY.md
UnrealMCPProxy/src/unreal_mcp_proxy/: __init__.py  compatibility.py  config.py  constants.py  errors.py  initialization.py  prompt_definitions.py  prompts.py  resource_definitions.py  server.py  tool_decorators.py  tool_definitions.py  tool_definitions_asset.py  tool_definitions_blueprint.py  tool_definitions_common.py  tool_definitions_helpers.py  tools.py
UnrealMCPProxy/src/unreal_mcp_proxy/client/: __init__.py  unreal_mcp.py
UnrealMCPProxy/tests/: .gitkeep  README.md  __init__.py  run_test_phases.py  test_assets.py  test_integration.py  test_proxy_basic.py  test_server_integration.py  test_unit.py
docs/: SCHEMA_SYNCHRONIZATION_GUIDE.md  T3D_FORMAT_SPECIFICATION.md
(+9 files in other folders)
