[project]
name = "unreal-mcp-proxy"
version = "0.1.0"
description = "MCP proxy server for Unreal Engine MCP Server - provides persistent availability and graceful error handling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "httpx>=0.27.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    # Dev dependencies can be added here if needed in the future
]

